--- a/src/main/resources/templates/accounts/login.html
+++ b/src/main/resources/templates/accounts/login.html
@@ -10,15 +10,21 @@
             <div class="card">
                 <div class="card-body">
                     <h3>메뉴 로그인</h3>
-                    <div class="form-group">
-                        <label for="username"><b>username</b></label>
-                        <input type="text" class="form-control" id="username" name="username">
-                    </div>
-                    <div class="form-group">
-                        <label for="password"><b>password</b></label>
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                    <button type="button" id="login" class="btn btn-primary">login</button>
+                    <form th:action="@{/login}" method="post">
+                        <div class="form-group">
+                            <label for="username"><b>username</b></label>
+                            <input type="text" class="form-control" id="username" name="username">
+                        </div>
+                        <div class="form-group">
+                            <label for="password"><b>password</b></label>
+                            <input type="password" class="form-control" id="password" name="password">
+                        </div>
+                        <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                            <p>이메일과 패스워드가 정확하지 않습니다.</p>
+                            <p>또는 확인되지 않은 이메일을 사용했습니다. 이메일을 확인해 주세요.</p>
+                        </div>
+                        <input type="submit" id="login" class="btn btn-primary" value="login">
+                    </form>
                 </div>
             </div>
         </div>
